# DLFromScratch

./: pyproject.toml
computer_vision/: cnn_example.ipynb
computer_vision/bone_fracture_mask_r_cnn/: fiftyone_dataset_cleanup.ipynb  mask_r_cnn.ipynb  try_fiftyone.py
computer_vision/simple_cnn/: README.md  cnn_example.ipynb
computer_vision/unet/: data_loading.py  evaluate.py  predict.py  unet.ipynb
computer_vision/unet/wandb/: latest-run
computer_vision/unet/wandb/run-20250218_154425-lz19rtfx/: run-lz19rtfx.wandb
computer_vision/unet/wandb/run-20250218_154425-lz19rtfx/files/: wandb-metadata.json
computer_vision/unet/wandb/run-20250218_155439-8kjtvkjk/files/: wandb-metadata.json
computer_vision/unet/wandb/run-20250218_155818-4k3y2si8/files/: wandb-metadata.json
computer_vision/unet/wandb/run-20250218_160008-ba4hwkxe/files/: wandb-metadata.json
computer_vision/unet/wandb/run-20250218_160225-gttytnnb/files/: wandb-metadata.json
computer_vision/unet/wandb/run-20250218_160452-ovu0osil/files/: requirements.txt  wandb-metadata.json
computer_vision/unet/wandb/run-20250218_161005-gh7m03h4/: run-gh7m03h4.wandb
computer_vision/unet/wandb/run-20250218_161005-gh7m03h4/files/: wandb-metadata.json
computer_vision/unet_brain_mri/: README.md  evaluate.py
computer_vision/unet_carvana_segmentation/: README.md  data_loading.py  dice_score.py  evaluate.py  unet.ipynb  utils.py
micrograd/: micrograd.ipynb  micrograd_classes.py  micrograd_demo.ipynb
