[tool.poetry]
name = "dlfromscratch"
version = "0.1.0"
description = ""
authors = ["mp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
import-ipynb = "^0.2"
ipynb = "^0.5.1"
flake8 = "^7.1.1"
black = "^25.1.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
